Replacing remaining dummy text with marketing copy

--- a/namaste/namaste_app/templates/about-us.html
+++ b/namaste/namaste_app/templates/about-us.html
@@ -242,10 +242,11 @@
 			<div class="row align-items-center">
 				<div class="col-md-6">
 					<div class="appoinment-text wow fadeIn">
-						<h2>Make an Appointment?</h2>
-						<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos, In massa urna pellentesque habitant morbi tristique senectus.</p>
-						<p>Call us : 002-6666-8888 or fill out our online booking & equiry form and we’ll contact you.</p>
-						<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-primary">Make Appointment</a>
+						<h2>Reservaciones</h2>
+						<p>Reserva tu cita hoy y comienza tu camino hacia una vida más saludable y armoniosa. </p>
+						<p>Disfruta de nuestros servicios personalizados y deja que nuestros expertos te cuiden como mereces.</p>
+						<p>Llamenos al numero: 939-475-7743 o reserva online desde nuestra plataforma.</p>
+						<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-primary">Reserva Ahora</a>
 					</div>
 				</div>
 				<div class="col-md-6">
