--- a/namaste/namaste_app/templates/services.html
+++ b/namaste/namaste_app/templates/services.html
@@ -276,11 +276,11 @@
 						<p>En Namasté, nos dedicamos a proporcionar un servicio excepcional en masajes y tratamientos de piel, entendiendo que cada cliente tiene necesidades únicas. </p>
 						<p>Aquí te mostramos por qué somos la mejor opción para cuidar de tu bienestar físico y estético:</p>
 						<ul>
-							<li>Experiencia Profesional: Nos mantenemos al día con las últimas técnicas y tratamientos para asegurarnos de que recibas la mejor </li>
-							<li>Ambiente Relajante: Desde el momento en que entras, te sumerges en un ambiente calmante que te prepara para una experiencia de relajación y rejuvenecimiento total.</li>
-							<li>Tratamientos Personalizados: Tras una evaluación detallada, adaptamos cada tratamiento para responder eficazmente a tus expectativas y requerimientos específicos.</li>
-							<li>Resultados Comprobados: Nuestros clientes son nuestra mejor carta de recomendación. La satisfacción y los resultados visibles que ellos experimentan son testimonio de nuestro compromiso con la excelencia.</li>
-							<li>Atención Integral: Además de cuidar de tu piel y cuerpo, nos preocupamos por tu bienestar general. Nuestro enfoque holístico en el cuidado personal te asegura no solo lucir bien, sino sentirte bien en todos los aspectos.</li>
+							<li><b>Experiencia Profesional:</b> Nos mantenemos al día con las últimas técnicas y tratamientos para asegurarnos de que recibas la mejor </li>
+							<li><b>Ambiente Relajante:</b> Desde el momento en que entras, te sumerges en un ambiente calmante que te prepara para una experiencia de relajación y rejuvenecimiento total.</li>
+							<li><b>Tratamientos Personalizados:</b> Tras una evaluación detallada, adaptamos cada tratamiento para responder eficazmente a tus expectativas y requerimientos específicos.</li>
+							<li><b>Resultados Comprobados:</b> Nuestros clientes son nuestra mejor carta de recomendación. La satisfacción y los resultados visibles que ellos experimentan son testimonio de nuestro compromiso con la excelencia.</li>
+							<li><b>Atención Integral:</b> Además de cuidar de tu piel y cuerpo, nos preocupamos por tu bienestar general. Nuestro enfoque holístico en el cuidado personal te asegura no solo lucir bien, sino sentirte bien en todos los aspectos.</li>
 						</ul>
 					</div>
 				</div>
@@ -294,10 +294,11 @@
 			<div class="row align-items-center">
 				<div class="col-md-6">
 					<div class="appoinment-text wow fadeIn">
-						<h2>Make an Appointment?</h2>
-						<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos, In massa urna pellentesque habitant morbi tristique senectus.</p>
-						<p>Call us : 002-6666-8888 or fill out our online booking & equiry form and we’ll contact you.</p>
-						<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-primary">Make Appointment</a>
+						<h2>Reservaciones</h2>
+						<p>Reserva tu cita hoy y comienza tu camino hacia una vida más saludable y armoniosa. </p>
+						<p>Disfruta de nuestros servicios personalizados y deja que nuestros expertos te cuiden como mereces.</p>
+						<p>Llamenos al numero: 939-475-7743 o reserva online desde nuestra plataforma.</p>
+						<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-primary">Reserva Ahora</a>
 					</div>
 				</div>
 				<div class="col-md-6">
