--- a/namaste/namaste_app/templates/base.html
+++ b/namaste/namaste_app/templates/base.html
@@ -139,10 +139,8 @@
 					</div>
 					<div class="col-sm-12 col-md-6">
 						<ul class="social-icons pull-right">
-							<li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fab fa-tiktok"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/NamastebyJ" target="_blank"><i class="fab fa-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/namastebyjennys/" target="_blank"><i class="fab fa-instagram"></i></a></li>
 						</ul>
 					</div>
 				</div>
