--- a/namaste/namaste_app/templates/contact-us.html
+++ b/namaste/namaste_app/templates/contact-us.html
@@ -34,7 +34,9 @@
 					<div class="contact-info text-center wow fadeIn">
 						<i class="fa fa-envelope-open-o"></i>
 						<h3>Escribenos Un Email:</h3>
-						<p><a href="mailto:contactonamastepr@gmail.com">contactonamastepr@gmail.com</a></p>
+						<p>
+							<a href="mailto:contactonamastepr@gmail.com" target="_blank">contactonamastepr@gmail.com</a>
+						</p>
 					</div>
 				</div>
 				
@@ -42,7 +44,11 @@
 					<div class="contact-info text-center wow fadeIn">
 						<i class="fa fa-map-marker"></i>
 						<h3>Visitanos En:</h3>
-						<p>Ave. Nativo Alers  <br>Aguada, Puerto Rico, 00602</p>
+						<p>
+							<a href="https://www.google.com/maps/search/?api=1&query=18.379889538638913, -67.19649930916623" target="_blank">
+								Ave. Nativo Alers  <br>Aguada, Puerto Rico, 00602
+							</a> 
+						</p>
 					</div>
 				</div>
 			</div>
