--- a/namaste/namaste_app/templates/gold_detox.html
+++ b/namaste/namaste_app/templates/gold_detox.html
@@ -6,11 +6,11 @@
 		<div class="page-banner-caption">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-12">
+					<div class="col-md-12" id="gold-detox">
 						<h1>Gold Detox</h1>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-							<li class="breadcrumb-item active">Gold Detox</li>
+							<li class="breadcrumb-item active" id="detox">Gold Detox</li>
 						</ol>
 					</div>
 				</div>
@@ -77,7 +77,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drenaje.jpg" alt=""></a>
+							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drenaje2.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'drenaje' %}">Drenaje Linfático</a></h3>
