More finishing touches

--- a/namaste/namaste_app/templates/about-us.html
+++ b/namaste/namaste_app/templates/about-us.html
@@ -38,6 +38,33 @@
 		</div>
 	</section>
 	<!-- end our history -->
+
+	<section class="section-spacing inverse-bg">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-6">
+					<div class="img-block wow fadeIn">
+						<img src="/static/img/namaste/namaste_why_us.jpg" alt="">
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6">
+					<div class="text-block wow fadeIn">
+						<h2>Porque Nosotros?</h2>
+						<p>En Namasté, nos dedicamos a proporcionar un servicio excepcional en masajes y tratamientos de piel, entendiendo que cada cliente tiene necesidades únicas. </p>
+						<p>Aquí te mostramos por qué somos la mejor opción para cuidar de tu bienestar físico y estético:</p>
+						<ul>
+							<li><b>Experiencia Profesional:</b> Nos mantenemos al día con las últimas técnicas y tratamientos para asegurarnos de que recibas la mejor </li>
+							<li><b>Ambiente Relajante:</b> Desde el momento en que entras, te sumerges en un ambiente calmante que te prepara para una experiencia de relajación y rejuvenecimiento total.</li>
+							<li><b>Tratamientos Personalizados:</b> Tras una evaluación detallada, adaptamos cada tratamiento para responder eficazmente a tus expectativas y requerimientos específicos.</li>
+							<li><b>Resultados Comprobados:</b> Nuestros clientes son nuestra mejor carta de recomendación. La satisfacción y los resultados visibles que ellos experimentan son testimonio de nuestro compromiso con la excelencia.</li>
+							<li><b>Atención Integral:</b> Además de cuidar de tu piel y cuerpo, nos preocupamos por tu bienestar general. Nuestro enfoque holístico en el cuidado personal te asegura no solo lucir bien, sino sentirte bien en todos los aspectos.</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- end why choose -->
 	
 	<section class="section-spacing inverse-bg">
 		<div class="container">
@@ -45,7 +72,6 @@
 				<div class="col-md-12">
 					<div class="section-title text-center">
 						<h2><span>Conozca Nuestros Expertos</span></h2>
-						<p>Our product is fully personalized and well balanced for all age of customers or adults. We maintain the standards by lorem ipsum and certified by dolor set amet.</p>
 					</div>
 				</div>
 			</div>
@@ -58,17 +84,11 @@
 						</div>
 						<div class="team-info text-center">
 							<h3>Jennys</h3>
-							<h6>Experta en Terapias</h6>
+							<h6>Propietaria</h6>
 						</div>
 						<div class="team-overlay text-center">
-							<h3>Tasfia</h3>
-							<h6>Hair Expert</h6>
-							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
-							</ul>
+							<h3>Jennys</h3>
+							<h6>Propietaria</h6>
 						</div>
 					</div>
 				</div>
@@ -79,18 +99,12 @@
 							<img src="/static/img/team/2.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
-							<h3>Salina Gomej</h3>
-							<h6>Message Expert</h6>
+							<h3>Bibiana</h3>
+							<h6>Maderoterapia</h6>
 						</div>
 						<div class="team-overlay text-center">
-							<h3>Salina Gomej</h3>
-							<h6>Message Expert</h6>
-							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
-							</ul>
+							<h3>Bibiana</h3>
+							<h6>Maderoterapia</h6>
 						</div>
 					</div>
 				</div>
@@ -101,18 +115,12 @@
 							<img src="/static/img/team/3.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
-							<h3>Julia Shorez</h3>
-							<h6>Skin Therapist</h6>
+							<h3>Alondra</h3>
+							<h6>Esteticista</h6>
 						</div>
 						<div class="team-overlay text-center">
-							<h3>Julia Shorez</h3>
-							<h6>Skin Therapist</h6>
-							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
-							</ul>
+							<h3>Alondra</h3>
+							<h6>Esteticista</h6>
 						</div>
 					</div>
 				</div>
@@ -123,106 +131,12 @@
 							<img src="/static/img/team/4.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
-							<h3>Sharmin Akter</h3>
-							<h6>Therapy Expert</h6>
+							<h3>Valeria</h3>
+							<h6>Fotógrafa</h6>
 						</div>
 						<div class="team-overlay text-center">
-							<h3>Sharmin Akter</h3>
-							<h6>Therapy Expert</h6>
-							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				
-				<div class="col-sm-6 col-md-6 col-lg-3">
-					<div class="team wow fadeIn">
-						<div class="thumb">
-							<img src="/static/img/team/5.jpg" alt="">
-						</div>
-						<div class="team-info text-center">
-							<h3>Tasfia</h3>
-							<h6>Hair Expert</h6>
-						</div>
-						<div class="team-overlay text-center">
-							<h3>Tasfia</h3>
-							<h6>Hair Expert</h6>
-							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				
-				<div class="col-sm-6 col-md-6 col-lg-3">
-					<div class="team wow fadeIn">
-						<div class="thumb">
-							<img src="/static/img/team/6.jpg" alt="">
-						</div>
-						<div class="team-info text-center">
-							<h3>Salina Gomej</h3>
-							<h6>Message Expert</h6>
-						</div>
-						<div class="team-overlay text-center">
-							<h3>Salina Gomej</h3>
-							<h6>Message Expert</h6>
-							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				
-				<div class="col-sm-6 col-md-6 col-lg-3">
-					<div class="team wow fadeIn">
-						<div class="thumb">
-							<img src="/static/img/team/7.jpg" alt="">
-						</div>
-						<div class="team-info text-center">
-							<h3>Julia Shorez</h3>
-							<h6>Skin Therapist</h6>
-						</div>
-						<div class="team-overlay text-center">
-							<h3>Julia Shorez</h3>
-							<h6>Skin Therapist</h6>
-							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				
-				<div class="col-sm-6 col-md-6 col-lg-3">
-					<div class="team wow fadeIn">
-						<div class="thumb">
-							<img src="/static/img/team/8.jpg" alt="">
-						</div>
-						<div class="team-info text-center">
-							<h3>Sharmin Akter</h3>
-							<h6>Therapy Expert</h6>
-						</div>
-						<div class="team-overlay text-center">
-							<h3>Sharmin Akter</h3>
-							<h6>Therapy Expert</h6>
-							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
-							</ul>
+							<h3>Valeria</h3>
+							<h6>Fotógrafa</h6>
 						</div>
 					</div>
 				</div>
@@ -230,7 +144,7 @@
 			
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<a href="{% url 'contacto' %}" class="btn btn-primary">Contact Us</a>
+					<a href="{% url 'contacto' %}" class="btn btn-primary">Contactanos</a>
 				</div>
 			</div>
 		</div>
