--- a/namaste/namaste_app/templates/index.html
+++ b/namaste/namaste_app/templates/index.html
@@ -213,17 +213,11 @@
 						</div>
 						<div class="team-info text-center">
 							<h3>Jennys</h3>
-							<h6>Experta en Masajes y Tratamientos</h6>
+							<h6>Propietaria</h6>
 						</div>
 						<div class="team-overlay text-center">
 							<h3>Jennys</h3>
-							<h6>Experta en Masajes y Tratamientos</h6>
-							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-							</ul>
+							<h6>Propietaria</h6>
 						</div>
 					</div>
 				</div>
@@ -234,18 +228,12 @@
 							<img src="/static/img/team/2.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
-							<h3>Sally</h3>
-							<h6>Terapista de Masaje</h6>
+							<h3>Bibiana</h3>
+							<h6>Maderoterapia</h6>
 						</div>
 						<div class="team-overlay text-center">
-							<h3>Sally</h3>
-							<h6>Terapista de Masaje</h6>
-							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-							</ul>
+							<h3>Bibiana</h3>
+							<h6>Maderoterapia</h6>
 						</div>
 					</div>
 				</div>
@@ -256,18 +244,12 @@
 							<img src="/static/img/team/3.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
-							<h3>Julia</h3>
-							<h6>Terapista de Masaje</h6>
+							<h3>Alondra</h3>
+							<h6>Esteticista</h6>
 						</div>
 						<div class="team-overlay text-center">
-							<h3>Julia</h3>
-							<h6>Terapista de Masaje</h6>
-							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-							</ul>
+							<h3>Alondra</h3>
+							<h6>Esteticista</h6>
 						</div>
 					</div>
 				</div>
@@ -278,18 +260,12 @@
 							<img src="/static/img/team/4.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
-							<h3>Sharnice</h3>
-							<h6>Terapista de Masaje</h6>
+							<h3>Valeria</h3>
+							<h6>Fotógrafa</h6>
 						</div>
 						<div class="team-overlay text-center">
-							<h3>Sharnice</h3>
-							<h6>Terapista de Masaje</h6>
-							<ul class="social-icons">
-								<li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-							</ul>
+							<h3>Valeria</h3>
+							<h6>Fotógrafa</h6>
 						</div>
 					</div>
 				</div>
@@ -297,7 +273,7 @@
 			
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<a href="#" class="btn btn-primary">Conozca Nuestro Equipo</a>
+					<a href="{% url 'sobre-nosotros' %}" class="btn btn-primary">Nuestra Historia</a>
 				</div>
 			</div>
 		</div>
@@ -324,7 +300,7 @@
 					</div>
 					<div class="author-info">
 						<div class="author_thumb">
-							<img src="/static/img/testimonials/1.png" alt="">
+							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
 							<span class="author-name">Juana Mancha</span>
@@ -341,7 +317,7 @@
 					</div>
 					<div class="author-info">
 						<div class="author_thumb">
-							<img src="/static/img/testimonials/2.png" alt="">
+							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
 							<span class="author-name">Ricardo Arroyo</span>
@@ -358,7 +334,7 @@
 					</div>
 					<div class="author-info">
 						<div class="author_thumb">
-							<img src="/static/img/testimonials/3.png" alt="">
+							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
 							<span class="author-name">Victoria de Gloria</span>
@@ -375,7 +351,7 @@
 					</div>
 					<div class="author-info">
 						<div class="author_thumb">
-							<img src="/static/img/testimonials/1.png" alt="">
+							<img src="/static/img/namaste/testimonial_buddha.jpg" alt="">
 						</div>
 						<div class="author-meta">
 							<span class="author-name">Pancho Santos</span>
