--- a/namaste/namaste_app/templates/post_op.html
+++ b/namaste/namaste_app/templates/post_op.html
@@ -51,8 +51,31 @@
 		</div>
 	</section>
 	<!-- end services -->
-	
+
 	<section class="section-spacing inverse-bg">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div>
+						<div class="section-title text-center">
+							<h2><span>Reglas</span></h2>
+							<ul>
+								<li>Toda cita requiere un depósito de $15 antes de ser agendado.</li><br>
+								<li>De ausentarse a la cita, el depósito no es reembolsable. En caso de que desee agendar otra cita, nuevamente se requerirá el depósito de $15 para una nueva cita.</li><br>
+								<li>Se requiere que llegue 5 minutos antes de su cita. De llegar más de 10 minutos tarde a la hora pautada, la cita se cancelará automáticamente.</li><br>
+								<li>Si desea cambiar o cancelar su cita se requiere que sea con dos días de anticipación. De lo contrario perderá el depósito.</li><br>
+								<li>No se aceptan niños como acompañantes.</li><br>
+								<li>Nos reservamos el derecho de admisión.</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- end Reglas -->
+	
+	<section class="section-spacing">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
