--- a/namaste/namaste_app/templates/index.html
+++ b/namaste/namaste_app/templates/index.html
@@ -118,7 +118,7 @@
 				<div class="col-sm-12 col-md-6">
 					<div class="img-block wow fadeIn">
 						<img src="/static/img/namaste/video_screenshot.jpg" alt="">
-						<div class="play-button">
+						<div class="play-button" id="index-play-button">
 							<a href="#" data-toggle="modal" data-target="#video-modal"><i class="fa fa-play"></i></a>
 						</div>
 					</div>
