Spelling mistake in our team members section

--- a/namaste/namaste_app/templates/about-us.html
+++ b/namaste/namaste_app/templates/about-us.html
@@ -99,11 +99,11 @@
 							<img src="/static/img/team/2.jpg" alt="">
 						</div>
 						<div class="team-info text-center">
-							<h3>Bibiana</h3>
+							<h3>Viviana</h3>
 							<h6>Maderoterapia</h6>
 						</div>
 						<div class="team-overlay text-center">
-							<h3>Bibiana</h3>
+							<h3>Viviana</h3>
 							<h6>Maderoterapia</h6>
 						</div>
 					</div>
