--- a/namaste/namaste_app/templates/index.html
+++ b/namaste/namaste_app/templates/index.html
@@ -21,9 +21,14 @@
                                     }
                                 </style>
 								<div class="hero-text margin-adjust">
-									<!-- <h6 class="animated fadeInDown">Consetetur Adipiscing</h6> -->
+									<!-- Desktop image -->
+    								<img src="/static/img/namaste/namaste_hand_logo_black.jpg" alt="namaste_logo" class="desktop-image animated fadeInDown">
+    
+    								<!-- Mobile image -->
+    								<img src="/static/img/namaste/namaste_hand_logo_black_136x136.jpg" alt="namaste_logo_mobile" class="mobile-image animated fadeInDown">
+
 									<h1 class="animated fadeInUp">NAMASTÉ</h1>
-									<!-- <p class="animated fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt ullamcorper magna, in tincidunt ex auctor et.</p> -->
+									<h2 class="animated fadeInUp">EXCLUSIVE FOR YOU</h2>
 									<a href="{% url 'contacto' %}" class="btn btn-primary animated fadeInUp">RESERVA AHORA</a>
 								</div>
 							</div>
